--- a/api/pom.xml
+++ b/api/pom.xml
@@ -17,6 +17,18 @@
             <artifactId>cqrs-utills</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.agh.eaiib</groupId>
+            <artifactId>user-service-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.agh.eaiib</groupId>
+            <artifactId>user-service-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
