--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -11,11 +11,28 @@
 
     <artifactId>user-service-domain</artifactId>
 
+    <repositories>
+        <repository>
+            <id>konform</id>
+            <url>https://dl.bintray.com/konform-kt/konform</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
             <groupId>org.agh.eaiib</groupId>
             <artifactId>db-utills</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency></dependencies>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>io.konform</groupId>-->
+            <!--<artifactId></artifactId>-->
+        <!--</dependency>-->
+    </dependencies>
 </project>
