--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -37,6 +37,12 @@
     </repositories>
     <dependencies>
         <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.jetbrains.exposed</groupId>
             <artifactId>exposed</artifactId>
             <version>0.16.1</version>
