test added, and joda time removed from dto and domain

--- a/infrastructure/src/main/resources/application.conf
+++ b/infrastructure/src/main/resources/application.conf
@@ -1,9 +1,9 @@
-ktor {
-    deployment {
-        port = 8080
-        port = ${?PORT}
-    }
-    application {
-        modules = [ org.agh.eaiib.ApplicationKt.module ]
-    }
-}
+//ktor {
+//    deployment {
+//        port = 8080
+//        port = ${?PORT}
+//    }
+//    application {
+//        modules = [ org.agh.eaiib.ApplicationKt.module ]
+//    }
+//}
