--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -127,6 +127,13 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>org.agh.eaiib</groupId>
+            <artifactId>application</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-coroutines-core</artifactId>
             <version>1.3.0-M1</version>
