--- a/application/pom.xml
+++ b/application/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>org.agh.eaiib</groupId>
-            <artifactId>user-service-command-api</artifactId>
+            <artifactId>api</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
