--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -3,10 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.agh.eaiib</groupId>
-    <artifactId>user-service-infrastructure</artifactId>
+    <artifactId>infrastructure</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>user-service-infrastructure</name>
-    <description>user-service-infrastructure</description>
+    <name>infrastructure</name>
     <properties>
         <ktor_version>1.2.2</ktor_version>
         <kotlin.code.style>official</kotlin.code.style>
@@ -104,7 +103,7 @@
         </dependency>
         <dependency>
             <groupId>org.agh.eaiib</groupId>
-            <artifactId>user-service-domain</artifactId>
+            <artifactId>domain</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
@@ -133,7 +132,7 @@
         </dependency>
         <dependency>
             <groupId>org.agh.eaiib</groupId>
-            <artifactId>user-service-command-api</artifactId>
+            <artifactId>api</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
