--- a/api/pom.xml
+++ b/api/pom.xml
@@ -13,9 +13,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.agh.eaiib</groupId>
-            <artifactId>cqrs-utills</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>io.ktor</groupId>
+            <artifactId>ktor-jackson</artifactId>
+            <version>1.1.3</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.agh.eaiib</groupId>
